--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -253,6 +253,211 @@ header nav a {
 }
 
 
+.carousel.next .list .item:nth-child(1) {
+    animation: positionItem2 .5s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem2 {
+    from {
+        transform: var(--item2-transform);
+        filter: var(--item2-filter);
+        z-index: var(--item2-zIndex);
+        opacity: var(--item2-opacity);
+    }
+}
+
+.carousel.next .list .item:nth-child(2) {
+    animation: positionItem3 .7s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem3 {
+    from {
+        transform: var(--item3-transform);
+        filter: var(--item3-filter);
+        z-index: var(--item3-zIndex);
+        opacity: var(--item3-opacity);
+    }
+}
+
+.carousel.next .list .item:nth-child(3) {
+    animation: positionItem4 .9s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem4 {
+    from {
+        transform: var(--item4-transform);
+        filter: var(--item4-filter);
+        z-index: var(--item4-zIndex);
+        opacity: var(--item4-opacity);
+    }
+}
+
+.carousel.next .list .item:nth-child(4) {
+    animation: positionItem5 1.1s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem5 {
+    from {
+        transform: var(--item5-transform);
+        filter: var(--item5-filter);
+        z-index: var(--item5-zIndex);
+        opacity: var(--item5-opacity);
+    }
+}
+
+
+.carousel.prev .list .item:nth-child(2) {
+    animation: positionItem1 .5s ease-in-out 1 forwards;
+}
+
+@keyframes positionItem1 {
+    from {
+        transform: var(--item1-transform);
+        filter: var(--item1-filter);
+        z-index: var(--item1-zIndex);
+        opacity: var(--item1-opacity);
+    }
+}
+
+.carousel.prev .list .item:nth-child(3) {
+    animation: positionItem2 .7s ease-in-out 1 forwards;
+}
+
+.carousel.prev .list .item:nth-child(4) {
+    animation: positionItem3 .9s ease-in-out 1 forwards;
+}
+
+.carousel.prev .list .item:nth-child(5) {
+    animation: positionItem4 1.1s ease-in-out 1 forwards;
+}
+
+.carousel .list .item {
+    transition: left .5s, opacity .5s, width .5s;
+}
+
+.carousel.showDetail .list .item:nth-child(3),
+.carousel.showDetail .list .item:nth-child(4) {
+    left: 100%;
+    opacity: 0;
+    pointer-events: none;
+}
+
+.carousel.showDetail .list .item:nth-child(2) {
+    width: 100%;
+}
+
+.carousel.showDetail .list .item:nth-child(2) .intro {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.carousel .list .item:nth-child(2) img {
+    transition: right .5s;
+}
+
+.carousel.showDetail .list .item:nth-child(2) img { 
+    right: 50%;
+}
+
+.carousel.showDetail .list .item:nth-child(2) .detail {
+    opacity: 1;
+    pointer-events: auto;
+    width: 50%;
+    position: absolute;
+    right: 0;
+    text-align: right;
+    top: 50%;
+    transform: translateY(-50%);
+} 
+
+.carousel.showDetail .list .item .detail .title {
+    font-size: 4em;
+}
+
+.carousel.showDetail .list .item .detail .specifications {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    border-top: 1px solid #555;
+    margin-top: 20px;
+} 
+
+.carousel.showDetail .list .item .detail .specifications div {
+    width: 90px;
+    text-align: center;
+    flex-shrink: 0;
+}
+
+.carousel.showDetail .list .item .detail .specifications div p:nth-child(1) {
+    font-weight: bold;
+}
+
+.carousel.showDetail .list .item .detail .checkout button {
+    font-family: Poppins;
+    background-color: transparent;
+    border: 1px solid #555;
+    margin-left: 5px;
+    font-weight: 500;
+    padding: 5px 10px;
+    cursor: pointer;
+}
+
+.carousel.showDetail .list .item .detail .checkout button:nth-child(2) {
+    background-color: #693eff;
+    color: #eee;
+}
+
+.carousel.showDetail .list .item:nth-child(2) .detail .title,
+.carousel.showDetail .list .item:nth-child(2) .detail .desc,
+.carousel.showDetail .list .item:nth-child(2) .detail .specifications,
+.carousel.showDetail .list .item:nth-child(2) .detail .checkout {
+    opacity: 0;
+    animation: showContent .5s 1s ease-in-out 1 forwards;
+}
+
+.carousel.showDetail .list .item:nth-child(2) .detail .desc {
+    animation-delay: 1.2s;
+}
+
+.carousel.showDetail .list .item:nth-child(2) .detail .specifications {
+    animation-delay: 1.4s;
+}
+
+.carousel.showDetail .list .item:nth-child(2) .detail .checkout {
+    animation-delay: 1.6s;
+}
+
+.carousel.showDetail #next,
+.carousel.showDetail #prev {
+    opacity: 0;
+    pointer-events: none;
+}
+
+.carousel.showDetail #back {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.carousel::before {
+    width: 500px;
+    height: 300px;
+    content: '';
+    background-image: linear-gradient(
+        45deg, #dc422a, blue
+    );
+    position: absolute;
+    z-index: -1;
+    border-radius: 20% 30% 80% 10%;
+    filter: blur(150px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-10%, -50%);
+    transition: 1s;
+}
+
+.carousel.showDetail::before {
+    transform: translate(-100%, -50%) rotate(70deg);
+}
 
 
 
