--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,7 +65,7 @@ header nav a {
 
 .carousel {
     margin-top: -50px;
-    height: 800px;
+    height: 90vh;
     overflow: hidden;
     position: relative;
 }
@@ -376,6 +376,7 @@ header nav a {
 
 .carousel.showDetail .list .item .detail .specifications {
     display: flex;
+    justify-content: space-between;
     gap: 10px;
     width: 100%;
     border-top: 1px solid #555;
@@ -390,6 +391,7 @@ header nav a {
 
 .carousel.showDetail .list .item .detail .specifications div p:nth-child(1) {
     font-weight: bold;
+    text-wrap: nowrap;
 }
 
 .carousel.showDetail .list .item .detail .checkout button {
@@ -459,9 +461,54 @@ header nav a {
     transform: translate(-100%, -50%) rotate(70deg);
 }
 
+@media screen and (max-width: 991px) {
+    .carousel .list .item {
+        width: 90%;
+    }
+    .carousel .list .detail .specifications {
+        overflow: auto;
+    } 
+}
 
-
-
-
-
+@media screen and (max-width: 767px) {
+    .carousel .list .item {
+        width: 100%;
+        font-size: 10px;
+    }
+    .carousel {
+        height: 90vh;
+    }
+    .carousel .list {
+        height: 100%;
+    }
+    .carousel .list .item .intro {
+        width: 50%;
+    }
+    .carousel .list .item img {
+        width: 40%;
+    }
+    .carousel.showDetail .list .item .detail .title {
+        font-size: 2em;
+        margin-bottom: 0.4em;
+    }
+    .carousel.showDetail .list .item .detail .desc {
+        height: 100px;
+        overflow: auto;
+    }
+    .carousel.showDetail .list .item .detail .specifications {
+        padding: 0.2em 0;
+        margin-bottom: 1em;
+    }
+    .carousel.showDetail .list .item .detail .checkout {
+        display: flex;
+        width: max-content;
+        float: right;
+    }
+    .carousel .list .item .intro .title {
+        font-size: 1.5em;
+    }
+    .carousel .list .item .intro .topic {
+        margin-block: 0.2em 0.5em;
+    }
+}
 
